fixed: the overflow of advice text from the original contianer

--- a/styles.css
+++ b/styles.css
@@ -134,8 +134,10 @@ body {
 
 @media (min-width: 768px) {
   .advice-container {
-    width: 35%;
-    height: 40vh;
+    width: 540px;
+    height: auto;
+    min-height: 330px;
+    padding: 4.8rem;
   }
   #advice-text {
     font-size: 1.8rem;
